# adrianvillanueva.com

./: .audit-ci.json  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  .yarnrc.yml  404.html  Dockerfile  LICENSE  README.md  astro.config.mjs  compose.yaml  config.toml  contentlayer.config.ts  data.json  docker-compose copy.yml  docker-compose.yml  ec.config.mjs  go.mod  go.sum  index.html  index.xml  instrumentation.node.ts  instrumentation.ts  jsconfig.json  makefile  next.config.js  nginx.conf  package copy.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json  server.go  sitemap.xml  svgo.config.mjs  tsconfig.json
.github/: dependabot.yml
.next/: trace
app/: Main-original.tsx  Main.tsx  global.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts  tag-data.json  theme-providers.tsx
categories/: index.html  index.xml
components/: AboutMe.js  BlogImage.tsx  BrutalistButton.tsx  Card.tsx  Comments.tsx  CyberpunkButton.tsx  Diagram.tsx  Footer.js  Footer.tsx  Header.tsx  Hero.js  Image.tsx  LatestCode.js  Link.tsx  LoadingSkeletons.tsx  MDXComponents.tsx  Mermaid.tsx  MobileNav.tsx  Navbar.js  PageTitle.tsx  ParticleField.tsx  ScrollTopAndComment.tsx  SearchButton.tsx  SectionContainer.tsx  Skills.tsx  TableWrapper.tsx  Tag.tsx  TagGraph.tsx  ThemeSwitch.tsx  TypewriterText.tsx
constants/: data.js
css/: brutalist.css  performance.css  prism.css  tailwind.css
data/: headerNavLinks.ts  projectsData.ts  resume.yaml  siteMetadata.js
infra/: 00app.yaml
(+248 files in other folders)
