[tool.poetry]
name = "adrianvillanueva-com"
version = "0.1.0"
description = ""
authors = ["adrianvillanueva997 <adrianvillanueva997@gmail.com>"]
readme = "README.md"
packages = [{include = "adrianvillanueva", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
